Feat: product-service API gateway 등록

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -21,7 +21,13 @@ spring:
           filters:
             - StripPrefix=1
             - name: JwtFilter
-
+        - id: product-service
+          uri: lb://product-service
+          predicates:
+            - Path=/product-service/**
+          filters:
+            - StripPrefix=1
+            - name: JwtFilter
       default-filters:
         - name: GlobalFilter
           args:
