--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'e-commerce'
 include 'user-service'
 include 'gateway-service'
 include 'product-service'
+include 'order-service'
