--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: sparta.userservice.config.CustomPhysicalNamingStrategy
     properties:
       hibernate:
         show_sql: true
