Chore: 유레카 상태 갱신 간격 수정 및 서비스 ddl-auto옵션 update로 변경

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: ${HIBERNATE_DDL_AUTO:create-drop}
+      ddl-auto: ${HIBERNATE_DDL_AUTO:update}
       naming:
         physical-strategy: sparta.productservice.config.CustomPhysicalNamingStrategy
 
