--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: ${HIBERNATE_DDL_AUTO:create}
+      ddl-auto: ${HIBERNATE_DDL_AUTO:update}
       naming:
         physical-strategy: sparta.orderservice.config.CustomPhysicalNamingStrategy
     properties:
