--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -28,6 +28,13 @@ spring:
           filters:
             - StripPrefix=1
             - name: JwtFilter
+        - id: order-service
+          uri: lb://order-service
+          predicates:
+            - Path=/order-service/**
+          filters:
+            - StripPrefix=1
+            - name: JwtFilter
       default-filters:
         - name: GlobalFilter
           args:
