Feat: product-service 배포를 위한 application-prod추가

--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -33,9 +33,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'mysql:mysql-connector-java:8.0.28'
-    implementation project(path: ':order-service')
+	implementation project(':order-service')
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
