Setting: RabbitMQ 환경 세팅

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -28,6 +28,12 @@ spring:
         format_sql: true
         generate-ddl: true
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 eureka:
   client:
     register-with-eureka: true
