--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -4,4 +4,6 @@ VOLUME /tmp
 
 COPY build/libs/order-service-0.0.1-SNAPSHOT.jar order-service.jar
 
+ENV SPRING_APPLICATION_NAME=order-service
+
 ENTRYPOINT ["java","-jar","/order-service.jar"]
