--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -4,4 +4,6 @@ VOLUME /tmp
 
 COPY build/libs/product-service-0.0.1-SNAPSHOT.jar product-service.jar
 
+ENV SPRING_APPLICATION_NAME=product-service
+
 ENTRYPOINT ["java","-jar","/product-service.jar"]
